<resources>
    <string name="app_name">NoPlanetB</string>
    <string name="app_icon">App icon</string>
    <string name="no_planet_b">No Planet B</string>
    <string name="too_late">Too late for leaving...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="favourite">Favourite</string>
    <string name="side_menu">Side menu</string>
    <string name="and_no_next_generation">And no next generation</string>
    <string name="long_text">A material metaphor is the unifying theory of a rationalized space and a system of motion. Our material is grounded in tactile reality, inspired by our study of paper and ink, yet open to imagination and magic. Surfaces and edges provide visual cues that are grounded in our experience of reality.</string>
    <string name="refreshed">Refreshed</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="join_us">Join us</string>
    <string name="login">Login</string>
</resources>
